--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>thai-unity</title>
+    <title>Thai Unity3D</title> 
   </head>
   <body>
     <div id="app"></div>
